--- a/public/tuiter/explore/index-a4-challenge.html
+++ b/public/tuiter/explore/index-a4-challenge.html
@@ -24,7 +24,7 @@
             <ul class="nav nav-tabs wd-no-border">
               <li id="bird" class="nav-item">
                 <a class="nav-link wd-text-black" href="#">
-                  <img src="./blueT.png" class="wd-t-logo"
+                  <img src="./images/blueT.png" class="wd-t-logo"
                 /></a>
               </li>
               <li id="home" class="nav-item">
@@ -189,7 +189,7 @@
                   </div>
 
                   <img
-                    src="./australia-2023.jpeg"
+                    src="./images/australia-2023.jpeg"
                     alt=""
                     class="card-img-top"
                   />
@@ -368,7 +368,7 @@
                 <div class="d-flex justify-content-start">
                   <div class="d-inline-flex col-2">
                     <img
-                      src="./hellokitty.jpeg"
+                      src="./images/hellokitty.jpeg"
                       ,
                       class="rounded-circle"
                       alt="Rounded Image"
@@ -400,7 +400,7 @@
                 <div class="d-flex justify-content-start">
                   <div class="d-inline-flex col-2">
                     <img
-                      src="./babyshark.png"
+                      src="./images/babyshark.png"
                       ,
                       class="rounded-circle"
                       alt="Rounded Image"
@@ -432,7 +432,7 @@
                 <div class="d-flex justify-content-start">
                   <div class="d-inline-flex col-2">
                     <img
-                      src="./NASA.png"
+                      src="./images/NASA.png"
                       ,
                       class="rounded-circle"
                       alt="Rounded Image"
@@ -511,7 +511,7 @@
             <ul class="nav nav-tabs wd-no-border">
               <li id="bird" class="nav-item wd-min-width">
                 <a class="nav-link wd-text-black" href="#">
-                  <img src="./blueT.png" class="wd-t-logo"
+                  <img src="./images/blueT.png" class="wd-t-logo"
                 /></a>
               </li>
               <li id="home" class="nav-item wd-min-width">
@@ -676,7 +676,7 @@
                   </div>
 
                   <img
-                    src="./australia-2023.jpeg"
+                    src="./images/australia-2023.jpeg"
                     alt=""
                     class="card-img-top"
                   />
@@ -823,7 +823,7 @@
                 <div class="d-flex justify-content-start">
                   <div class="d-inline-flex col-2">
                     <img
-                      src="./neu.png"
+                      src="./images/neu.png"
                       ,
                       class="rounded-circle"
                       alt="Rounded Image"
@@ -855,7 +855,7 @@
                 <div class="d-flex justify-content-start">
                   <div class="d-inline-flex col-2">
                     <img
-                      src="./hellokitty.jpeg"
+                      src="./images/hellokitty.jpeg"
                       ,
                       class="rounded-circle"
                       alt="Rounded Image"
@@ -887,7 +887,7 @@
                 <div class="d-flex justify-content-start">
                   <div class="d-inline-flex col-2">
                     <img
-                      src="./babyshark.png"
+                      src="./images/babyshark.png"
                       ,
                       class="rounded-circle"
                       alt="Rounded Image"
@@ -919,7 +919,7 @@
                 <div class="d-flex justify-content-start">
                   <div class="d-inline-flex col-2">
                     <img
-                      src="./NASA.png"
+                      src="./images/NASA.png"
                       ,
                       class="rounded-circle"
                       alt="Rounded Image"
@@ -998,7 +998,7 @@
             <ul class="nav nav-tabs wd-no-border">
               <li id="bird" class="nav-item wd-min-width">
                 <a class="nav-link wd-text-black" href="#">
-                  <img src="./blueT.png" class="wd-t-logo"
+                  <img src="./images/blueT.png" class="wd-t-logo"
                 /></a>
               </li>
               <li id="home" class="nav-item wd-min-width">
@@ -1163,7 +1163,7 @@
                     </div>
                   </div>
                   <img
-                    src="./australia-2023.jpeg"
+                    src="./images/australia-2023.jpeg"
                     alt=""
                     class="card-img-top"
                   />
@@ -1310,7 +1310,7 @@
                 <div class="d-flex justify-content-start">
                   <div class="d-inline-flex col-2">
                     <img
-                      src="./neu.png"
+                      src="./images/neu.png"
                       ,
                       class="rounded-circle"
                       alt="Rounded Image"
@@ -1342,7 +1342,7 @@
                 <div class="d-flex justify-content-start">
                   <div class="d-inline-flex col-2">
                     <img
-                      src="./hellokitty.jpeg"
+                      src="./images/hellokitty.jpeg"
                       ,
                       class="rounded-circle"
                       alt="Rounded Image"
@@ -1374,7 +1374,7 @@
                 <div class="d-flex justify-content-start">
                   <div class="d-inline-flex col-2">
                     <img
-                      src="./babyshark.png"
+                      src="./images/babyshark.png"
                       ,
                       class="rounded-circle"
                       alt="Rounded Image"
@@ -1406,7 +1406,7 @@
                 <div class="d-flex justify-content-start">
                   <div class="d-inline-flex col-2">
                     <img
-                      src="./NASA.png"
+                      src="./images/NASA.png"
                       ,
                       class="rounded-circle"
                       alt="Rounded Image"
@@ -1485,7 +1485,7 @@
             <ul class="nav nav-tabs wd-no-border">
               <li id="bird" class="nav-item wd-min-width">
                 <a class="nav-link wd-text-black" href="#">
-                  <img src="./blueT.png" class="wd-t-logo"
+                  <img src="./images/blueT.png" class="wd-t-logo"
                 /></a>
               </li>
               <li id="home" class="nav-item wd-min-width">
@@ -1650,7 +1650,7 @@
                     </div>
                   </div>
                   <img
-                    src="./australia-2023.jpeg"
+                    src="./images/australia-2023.jpeg"
                     alt=""
                     class="card-img-top"
                   />
@@ -1797,7 +1797,7 @@
                 <div class="d-flex justify-content-start">
                   <div class="d-inline-flex col-2">
                     <img
-                      src="./neu.png"
+                      src="./images/neu.png"
                       ,
                       class="rounded-circle"
                       alt="Rounded Image"
@@ -1829,7 +1829,7 @@
                 <div class="d-flex justify-content-start">
                   <div class="d-inline-flex col-2">
                     <img
-                      src="./hellokitty.jpeg"
+                      src="./images/hellokitty.jpeg"
                       ,
                       class="rounded-circle"
                       alt="Rounded Image"
@@ -1861,7 +1861,7 @@
                 <div class="d-flex justify-content-start">
                   <div class="d-inline-flex col-2">
                     <img
-                      src="./babyshark.png"
+                      src="./images/babyshark.png"
                       ,
                       class="rounded-circle"
                       alt="Rounded Image"
@@ -1893,7 +1893,7 @@
                 <div class="d-flex justify-content-start">
                   <div class="d-inline-flex col-2">
                     <img
-                      src="./NASA.png"
+                      src="./images/NASA.png"
                       ,
                       class="rounded-circle"
                       alt="Rounded Image"
@@ -1972,7 +1972,7 @@
             <ul class="nav nav-tabs wd-no-border">
               <li id="bird" class="nav-item wd-min-width">
                 <a class="nav-link wd-text-black" href="#">
-                  <img src="./blueT.png" class="wd-t-logo" />
+                  <img src="./images/blueT.png" class="wd-t-logo" />
                 </a>
               </li>
 
@@ -2122,7 +2122,7 @@
                     </div>
                   </div>
                   <img
-                    src="./australia-2023.jpeg"
+                    src="./images/australia-2023.jpeg"
                     alt=""
                     class="card-img-top"
                   />
@@ -2269,7 +2269,7 @@
                 <div class="d-flex justify-content-start">
                   <div class="d-inline-flex col-2">
                     <img
-                      src="./neu.png"
+                      src="./images/neu.png"
                       ,
                       class="rounded-circle"
                       alt="Rounded Image"
@@ -2301,7 +2301,7 @@
                 <div class="d-flex justify-content-start">
                   <div class="d-inline-flex col-2">
                     <img
-                      src="./hellokitty.jpeg"
+                      src="./images/hellokitty.jpeg"
                       ,
                       class="rounded-circle"
                       alt="Rounded Image"
@@ -2333,7 +2333,7 @@
                 <div class="d-flex justify-content-start">
                   <div class="d-inline-flex col-2">
                     <img
-                      src="./babyshark.png"
+                      src="./images/babyshark.png"
                       ,
                       class="rounded-circle"
                       alt="Rounded Image"
@@ -2365,7 +2365,7 @@
                 <div class="d-flex justify-content-start">
                   <div class="d-inline-flex col-2">
                     <img
-                      src="./NASA.png"
+                      src="./images/NASA.png"
                       ,
                       class="rounded-circle"
                       alt="Rounded Image"
@@ -2445,7 +2445,7 @@
             <ul class="nav nav-tabs wd-no-border">
               <li id="bird" class="nav-item wd-min-width">
                 <a class="nav-link wd-text-black" href="#">
-                  <img src="./blueT.png" class="wd-t-logo"
+                  <img src="./images/blueT.png" class="wd-t-logo"
                 /></a>
               </li>
               <li id="home" class="nav-item wd-min-width">
@@ -2594,7 +2594,7 @@
                     </div>
                   </div>
                   <img
-                    src="./australia-2023.jpeg"
+                    src="./images/australia-2023.jpeg"
                     alt=""
                     class="card-img-top"
                   />
@@ -2741,7 +2741,7 @@
                 <div class="d-flex justify-content-start">
                   <div class="d-inline-flex col-2">
                     <img
-                      src="./neu.png"
+                      src="./images/neu.png"
                       ,
                       class="rounded-circle"
                       alt="Rounded Image"
@@ -2773,7 +2773,7 @@
                 <div class="d-flex justify-content-start">
                   <div class="d-inline-flex col-2">
                     <img
-                      src="./hellokitty.jpeg"
+                      src="./images/hellokitty.jpeg"
                       ,
                       class="rounded-circle"
                       alt="Rounded Image"
@@ -2805,7 +2805,7 @@
                 <div class="d-flex justify-content-start">
                   <div class="d-inline-flex col-2">
                     <img
-                      src="./babyshark.png"
+                      src="./images/babyshark.png"
                       ,
                       class="rounded-circle"
                       alt="Rounded Image"
@@ -2837,7 +2837,7 @@
                 <div class="d-flex justify-content-start">
                   <div class="d-inline-flex col-2">
                     <img
-                      src="./NASA.png"
+                      src="./images/NASA.png"
                       ,
                       class="rounded-circle"
                       alt="Rounded Image"
