--- a/public/tuiter/explore/index-a4-tuiter.html
+++ b/public/tuiter/explore/index-a4-tuiter.html
@@ -154,7 +154,7 @@
 
             <div>
               <span class="starship-text-xs">SpaceX's Starship</span>
-              <img src="./Starship.jpg" alt="" class="card-img-top" />
+              <img src="./images/Starship.jpg" alt="" class="card-img-top" />
             </div>
 
             <div id="main-posts">
@@ -229,7 +229,7 @@
 
                     <div class="col-3">
                       <img
-                        src="./JavaScript.png"
+                        src="./images/JavaScript.png"
                         ,
                         class="rounded"
                         alt="Rounded Image"
@@ -251,7 +251,7 @@
 
                     <div class="col-3">
                       <img
-                        src="./jquery.png"
+                        src="./images/jquery.png"
                         ,
                         class="rounded"
                         alt="Rounded Image"
@@ -286,7 +286,7 @@
 
                     <div class="col-3">
                       <img
-                        src="./nodejs.png"
+                        src="./images/nodejs.png"
                         ,
                         class="rounded"
                         alt="Rounded Image"
@@ -307,7 +307,7 @@
                 <div class="d-flex justify-content-start">
                   <div class="d-inline-flex col-2">
                     <img
-                      src="./java.png"
+                      src="./images/java.png"
                       ,
                       class="rounded-circle"
                       alt="Rounded Image"
@@ -345,7 +345,7 @@
                 <div class="d-flex justify-content-start">
                   <div class="d-inline-flex col-2">
                     <img
-                      src="./Relativity Space.png"
+                      src="./images/Relativity Space.png"
                       ,
                       class="rounded-circle"
                       alt="Rounded Image"
@@ -383,7 +383,7 @@
                 <div class="d-flex justify-content-start">
                   <div class="d-inline-flex col-2">
                     <img
-                      src="./Virgin Galactic.png"
+                      src="./images/Virgin Galactic.png"
                       ,
                       class="rounded-circle"
                       alt="Rounded Image"
@@ -421,7 +421,7 @@
                 <div class="d-flex justify-content-start">
                   <div class="d-inline-flex col-2">
                     <img
-                      src="./NASA.png"
+                      src="./images/NASA.png"
                       ,
                       class="rounded-circle"
                       alt="Rounded Image"
@@ -459,7 +459,7 @@
                 <div class="d-flex justify-content-start">
                   <div class="d-inline-flex col-2">
                     <img
-                      src="./tesla.png"
+                      src="./images/tesla.png"
                       ,
                       class="rounded-circle"
                       alt="Rounded Image"
@@ -634,7 +634,7 @@
             </div>
             <div>
               <span class="starship-text-sm">SpaceX's Starship</span>
-              <img src="./Starship.jpg" alt="" class="card-img-top" />
+              <img src="./images/Starship.jpg" alt="" class="card-img-top" />
             </div>
 
             <div id="main-posts">
@@ -670,7 +670,7 @@
 
                     <div class="col-3">
                       <img
-                        src="./main-icon1.png"
+                        src="./images/main-icon1.png"
                         ,
                         class="rounded"
                         alt="Rounded Image"
@@ -709,7 +709,7 @@
 
                     <div class="col-3">
                       <img
-                        src="./JavaScript.png"
+                        src="./images/JavaScript.png"
                         ,
                         class="rounded"
                         alt="Rounded Image"
@@ -766,7 +766,7 @@
 
                     <div class="col-3">
                       <img
-                        src="./nodejs.png"
+                        src="./images/nodejs.png"
                         ,
                         class="rounded"
                         alt="Rounded Image"
@@ -787,7 +787,7 @@
                 <div class="d-flex justify-content-start">
                   <div class="d-inline-flex col-2">
                     <img
-                      src="./java.png"
+                      src="./images/java.png"
                       ,
                       class="rounded-circle"
                       alt="Rounded Image"
@@ -825,7 +825,7 @@
                 <div class="d-flex justify-content-start">
                   <div class="d-inline-flex col-2">
                     <img
-                      src="./Relativity Space.png"
+                      src="./images/Relativity Space.png"
                       ,
                       class="rounded-circle"
                       alt="Rounded Image"
@@ -863,7 +863,7 @@
                 <div class="d-flex justify-content-start">
                   <div class="d-inline-flex col-2">
                     <img
-                      src="./Virgin Galactic.png"
+                      src="./images/Virgin Galactic.png"
                       ,
                       class="rounded-circle"
                       alt="Rounded Image"
@@ -901,7 +901,7 @@
                 <div class="d-flex justify-content-start">
                   <div class="d-inline-flex col-2">
                     <img
-                      src="./NASA.png"
+                      src="./images/NASA.png"
                       ,
                       class="rounded-circle"
                       alt="Rounded Image"
@@ -939,7 +939,7 @@
                 <div class="d-flex justify-content-start">
                   <div class="d-inline-flex col-2">
                     <img
-                      src="./tesla.png"
+                      src="./images/tesla.png"
                       ,
                       class="rounded-circle"
                       alt="Rounded Image"
@@ -1115,7 +1115,7 @@
 
             <div>
               <span class="starship-text-md">SpaceX's Starship</span>
-              <img src="./Starship.jpg" alt="" class="card-img-top" />
+              <img src="./images/Starship.jpg" alt="" class="card-img-top" />
             </div>
 
             <div id="main-posts">
@@ -1151,7 +1151,7 @@
 
                     <div class="col-2">
                       <img
-                        src="./main-icon1.png"
+                        src="./images/main-icon1.png"
                         ,
                         class="rounded"
                         alt="Rounded Image"
@@ -1190,7 +1190,7 @@
 
                     <div class="col-2">
                       <img
-                        src="./JavaScript.png"
+                        src="./images/JavaScript.png"
                         ,
                         class="rounded"
                         alt="Rounded Image"
@@ -1247,7 +1247,7 @@
 
                     <div class="col-2">
                       <img
-                        src="./nodejs.png"
+                        src="./images/nodejs.png"
                         ,
                         class="rounded"
                         alt="Rounded Image"
@@ -1268,7 +1268,7 @@
                 <div class="d-flex justify-content-start">
                   <div class="d-inline-flex col-2">
                     <img
-                      src="./java.png"
+                      src="./images/java.png"
                       ,
                       class="rounded-circle"
                       alt="Rounded Image"
@@ -1306,7 +1306,7 @@
                 <div class="d-flex justify-content-start">
                   <div class="d-inline-flex col-2">
                     <img
-                      src="./Relativity Space.png"
+                      src="./images/Relativity Space.png"
                       ,
                       class="rounded-circle"
                       alt="Rounded Image"
@@ -1344,7 +1344,7 @@
                 <div class="d-flex justify-content-start">
                   <div class="d-inline-flex col-2">
                     <img
-                      src="./Virgin Galactic.png"
+                      src="./images/Virgin Galactic.png"
                       ,
                       class="rounded-circle"
                       alt="Rounded Image"
@@ -1382,7 +1382,7 @@
                 <div class="d-flex justify-content-start">
                   <div class="d-inline-flex col-2">
                     <img
-                      src="./NASA.png"
+                      src="./images/NASA.png"
                       ,
                       class="rounded-circle"
                       alt="Rounded Image"
@@ -1420,7 +1420,7 @@
                 <div class="d-flex justify-content-start">
                   <div class="d-inline-flex col-2">
                     <img
-                      src="./tesla.png"
+                      src="./images/tesla.png"
                       ,
                       class="rounded-circle"
                       alt="Rounded Image"
@@ -1597,7 +1597,7 @@
 
             <div>
               <span class="starship-text-lg">SpaceX's Starship</span>
-              <img src="./Starship.jpg" alt="" class="card-img-top" />
+              <img src="./images/Starship.jpg" alt="" class="card-img-top" />
             </div>
 
             <div id="main-posts">
@@ -1633,7 +1633,7 @@
 
                     <div class="col-2">
                       <img
-                        src="./main-icon1.png"
+                        src="./images/main-icon1.png"
                         ,
                         class="rounded"
                         alt="Rounded Image"
@@ -1672,7 +1672,7 @@
 
                     <div class="col-2">
                       <img
-                        src="./JavaScript.png"
+                        src="./images/JavaScript.png"
                         ,
                         class="rounded"
                         alt="Rounded Image"
@@ -1694,7 +1694,7 @@
 
                     <div class="col-2">
                       <img
-                        src="./jquery.png"
+                        src="./images/jquery.png"
                         ,
                         class="rounded"
                         alt="Rounded Image"
@@ -1729,7 +1729,7 @@
 
                     <div class="col-2">
                       <img
-                        src="./nodejs.png"
+                        src="./images/nodejs.png"
                         ,
                         class="rounded"
                         alt="Rounded Image"
@@ -1750,7 +1750,7 @@
                 <div class="d-flex justify-content-start">
                   <div class="d-inline-flex col-2">
                     <img
-                      src="./java.png"
+                      src="./images/java.png"
                       ,
                       class="rounded-circle"
                       alt="Rounded Image"
@@ -1788,7 +1788,7 @@
                 <div class="d-flex justify-content-start">
                   <div class="d-inline-flex col-2">
                     <img
-                      src="./Relativity Space.png"
+                      src="./images/Relativity Space.png"
                       ,
                       class="rounded-circle"
                       alt="Rounded Image"
@@ -1826,7 +1826,7 @@
                 <div class="d-flex justify-content-start">
                   <div class="d-inline-flex col-2">
                     <img
-                      src="./Virgin Galactic.png"
+                      src="./images/Virgin Galactic.png"
                       ,
                       class="rounded-circle"
                       alt="Rounded Image"
@@ -1864,7 +1864,7 @@
                 <div class="d-flex justify-content-start">
                   <div class="d-inline-flex col-2">
                     <img
-                      src="./NASA.png"
+                      src="./images/NASA.png"
                       ,
                       class="rounded-circle"
                       alt="Rounded Image"
@@ -1902,7 +1902,7 @@
                 <div class="d-flex justify-content-start">
                   <div class="d-inline-flex col-2">
                     <img
-                      src="./tesla.png"
+                      src="./images/tesla.png"
                       ,
                       class="rounded-circle"
                       alt="Rounded Image"
@@ -2080,7 +2080,7 @@
 
             <div>
               <span class="starship-text-xl">SpaceX's Starship</span>
-              <img src="./Starship.jpg" alt="" class="card-img-top" />
+              <img src="./images/Starship.jpg" alt="" class="card-img-top" />
             </div>
 
             <div id="main-posts">
@@ -2116,7 +2116,7 @@
 
                     <div class="col-2">
                       <img
-                        src="./main-icon1.png"
+                        src="./images/main-icon1.png"
                         ,
                         class="rounded"
                         alt="Rounded Image"
@@ -2155,7 +2155,7 @@
 
                     <div class="col-2">
                       <img
-                        src="./JavaScript.png"
+                        src="./images/JavaScript.png"
                         ,
                         class="rounded"
                         alt="Rounded Image"
@@ -2177,7 +2177,7 @@
 
                     <div class="col-2">
                       <img
-                        src="./jquery.png"
+                        src="./images/jquery.png"
                         ,
                         class="rounded"
                         alt="Rounded Image"
@@ -2212,7 +2212,7 @@
 
                     <div class="col-2">
                       <img
-                        src="./nodejs.png"
+                        src="./images/nodejs.png"
                         ,
                         class="rounded"
                         alt="Rounded Image"
@@ -2233,7 +2233,7 @@
                 <div class="d-flex justify-content-start">
                   <div class="d-inline-flex col-2">
                     <img
-                      src="./java.png"
+                      src="./images/java.png"
                       ,
                       class="rounded-circle"
                       alt="Rounded Image"
@@ -2271,7 +2271,7 @@
                 <div class="d-flex justify-content-start">
                   <div class="d-inline-flex col-2">
                     <img
-                      src="./Relativity Space.png"
+                      src="./images/Relativity Space.png"
                       ,
                       class="rounded-circle"
                       alt="Rounded Image"
@@ -2309,7 +2309,7 @@
                 <div class="d-flex justify-content-start">
                   <div class="d-inline-flex col-2">
                     <img
-                      src="./Virgin Galactic.png"
+                      src="./images/Virgin Galactic.png"
                       ,
                       class="rounded-circle"
                       alt="Rounded Image"
@@ -2347,7 +2347,7 @@
                 <div class="d-flex justify-content-start">
                   <div class="d-inline-flex col-2">
                     <img
-                      src="./NASA.png"
+                      src="./images/NASA.png"
                       ,
                       class="rounded-circle"
                       alt="Rounded Image"
@@ -2385,7 +2385,7 @@
                 <div class="d-flex justify-content-start">
                   <div class="d-inline-flex col-2">
                     <img
-                      src="./tesla.png"
+                      src="./images/tesla.png"
                       ,
                       class="rounded-circle"
                       alt="Rounded Image"
@@ -2561,7 +2561,7 @@
 
             <div>
               <span class="starship-text-xxl">SpaceX's Starship</span>
-              <img src="./Starship.jpg" alt="" class="card-img-top" />
+              <img src="./images/Starship.jpg" alt="" class="card-img-top" />
             </div>
 
             <div id="main-posts">
@@ -2636,7 +2636,7 @@
 
                     <div class="col-2">
                       <img
-                        src="./JavaScript.png"
+                        src="./images/JavaScript.png"
                         ,
                         class="rounded"
                         alt="Rounded Image"
@@ -2658,7 +2658,7 @@
 
                     <div class="col-2">
                       <img
-                        src="./jquery.png"
+                        src="./images/jquery.png"
                         ,
                         class="rounded"
                         alt="Rounded Image"
@@ -2693,7 +2693,7 @@
 
                     <div class="col-2">
                       <img
-                        src="./nodejs.png"
+                        src="./images/nodejs.png"
                         ,
                         class="rounded"
                         alt="Rounded Image"
@@ -2714,7 +2714,7 @@
                 <div class="d-flex justify-content-start">
                   <div class="d-inline-flex col-2">
                     <img
-                      src="./java.png"
+                      src="./images/java.png"
                       ,
                       class="rounded-circle"
                       alt="Rounded Image"
@@ -2752,7 +2752,7 @@
                 <div class="d-flex justify-content-start">
                   <div class="d-inline-flex col-2">
                     <img
-                      src="./Relativity Space.png"
+                      src="./images/Relativity Space.png"
                       ,
                       class="rounded-circle"
                       alt="Rounded Image"
@@ -2790,7 +2790,7 @@
                 <div class="d-flex justify-content-start">
                   <div class="d-inline-flex col-2">
                     <img
-                      src="./Virgin Galactic.png"
+                      src="./images/Virgin Galactic.png"
                       ,
                       class="rounded-circle"
                       alt="Rounded Image"
@@ -2828,7 +2828,7 @@
                 <div class="d-flex justify-content-start">
                   <div class="d-inline-flex col-2">
                     <img
-                      src="./NASA.png"
+                      src="./images/NASA.png"
                       ,
                       class="rounded-circle"
                       alt="Rounded Image"
@@ -2866,7 +2866,7 @@
                 <div class="d-flex justify-content-start">
                   <div class="d-inline-flex col-2">
                     <img
-                      src="./tesla.png"
+                      src="./images/tesla.png"
                       ,
                       class="rounded-circle"
                       alt="Rounded Image"
